# flight_prediction

./: Cargo.toml
src/: analysis.rs  data_preparation.rs  main.rs  model_planning.rs
